# fusion-mlx

./: .gitignore  ARCHITECTURE_ANALYSIS_2026-07-03.md  BENCHMARK_DECODE.md  BENCHMARK_REPORT.md  BENCHMARK_REPORT_R2.md  CHANGELOG.md  CODE_REVIEW_2026-07-03.md  CODE_REVIEW_2026-07-05.md  COMPARISON_AND_ROADMAP_2026-07-03.md  COMPREHENSIVE_REPORT_2026-07-03.md  FLASH_ATTN_MPS_MLX_PORT_PLAN.md  FUSION_MLX_AUDIT_P2P3_2026-07-12.md  FUSION_MLX_AUDIT_REPORT_2026-07-12.md  FUSION_MLX_AUDIT_REPORT_2026-07-12_full.md  OMLX_MIGRATION_PLAN.md  PHASE_C.md  README.md  README_CN.md  REVIEW_REPORT.md  SKYREELS_V3_MLX_PORT_PLAN.md  architecture.md  architecture_CN.md  bench_flux_quant.py  bench_skyreels.py  bench_skyreels_real.py  bench_skyreels_results.json  bench_speculative_denoise.py  configuration.md  configuration_CN.md  fusion-mlx-enhancement-proposal.md  model-config.json  pyproject.toml  speculative-decoding.md  star.sh  video-input.md
.claude/plans/: issue-180-metal-async-dispatch.md  phase2-speculative-denoise.md  phase3-video-decouple.md  skyreels-dit-unify.md  video-generation-multibackend.md
.dspark-integration/: verify_b2.py
.github/workflows/: ci.yml  publish.yml
.gstack/qa-reports/: baseline.json  qa-report-fusion-mlx-2026-06-06.md
apps/fusion-mac/: DESIGN.md  DESIGN_REVIEW.md  MIGRATION.md
benchmark_reports/: BENCHMARK_BASELINE_REPORT.md  bench_flux_deepopt_2026-07-19.html  bench_full_2026-07-18.html  bench_full_2026-07-18.json  benchmark_report_full.json  benchmark_report_quick.json
docs/: FR_DIFFERENTIATION.md  PR_IMAGE_REFERENCE_CONDITIONING.md  PR_JSON_MODE_DETERMINISTIC.md  api-reference.md  architecture.md  architecture_CN.md  cli-reference.md  configuration.md  configuration_CN.md  dspark-benchmark.md  nvfp4-weight-reader.md  speculative-decoding.md
docs/mlx-gui/: README.md
docs/plans/: acceleration-engines-vlm-video.md  feature-gap-sdxl-controlnet-ipadapter-animatediff.md  per-request-spec-routing-step2.md  per-request-spec-routing.md  video-generation-engine.md
downstream/: sync-to-omlx.py  sync-to-rapid.py  sync.py
examples/: 01-basic-chat.py  02-streaming-chat.py  03-anthropic-api.py  04-tool-calling.py  05-multi-model.py  06-image-generation.py  07-speech-to-text.py  08-text-to-speech.py  09-mcp-tools.py  10-python-sdk.py  11-comfyui-workflow.py  12-openclaw-agent-protocol.py
fusion_gui/: app_main.py  cli.py  database.py  mlx_integration.py  model_manager.py  server.py  tray.py
fusion_mlx/: __init__.py  __main__.py  _cli_base.py  _completion.py  _download_gate.py  _mirror.py  _mlx_compat.py  _parent_watchdog.py  _seeded_sampler.py  _signal_observability.py  _tempfile_safe.py  _torch_stub.py  _version.py  _version_check.py  aliases.json  cli.py  cli_commands.py  cli_convert.py  cli_lifecycle.py  cli_serve.py  compatibility.py  config.py  embedding.py  engine_core.py  engine_pool.py  exceptions.py  kv_cache_dtype.py  logging_config.py  memory_cache.py  memory_monitor.py  mllm_batch_generator.py  mllm_scheduler.py  model-config.json  model_aliases.py  model_auto_config.py  model_discovery.py  model_profiles.py  model_registry.py  multimodal_processor.py  mxfp4_moe_guardrail.py  (+13 more)
fusion_mlx/adapter/: __init__.py  gemma4.py  harmony.py
fusion_mlx/admin/: __init__.py  accuracy_bench.py  accuracy_benchmark.py  auth.py  auth_routes.py  bench.py  benchmark.py  canvas_routes.py  grammar_route.py  helpers.py  hf_download.py  hf_downloader.py  hf_upload.py  hf_uploader.py  html_routes.py  logs.py  models.py  models_route.py  ms_download.py  ms_downloader.py  oq.py  oq_manager.py  preset.py  profile.py  routes.py  settings.py  stats.py  subkey.py  update_check.py
fusion_mlx/agents/: __init__.py  adapter.py  testing.py
fusion_mlx/api/: __init__.py  _anthropic_helpers.py  _guards.py  _url_safety.py  agent_routes.py  anthropic_adapter.py  anthropic_models.py  anthropic_routes.py  anthropic_utils.py  audio_models.py  audio_routes.py  constants.py  convert_models.py  convert_routes.py  embedding_models.py  embedding_utils.py  embeddings_routes.py  grammar.py  guided.py  harmony_tools.py  images.py  markitdown.py  markitdown_pdf_fallback.py  mcp_routes.py  models.py  openai_models.py  openai_routes.py  openclaw_routes.py  recommend_routes.py  rerank_models.py  rerank_routes.py  responses_adapter.py  responses_models.py  responses_utils.py  shared_models.py  streaming.py  strict_json_schema.py  thinking.py  tool_calling.py  utils.py  (+1 more)
fusion_mlx/audio/: __init__.py  aliases.json  probe.py  processor.py  registry.py  stt.py  tts.py
fusion_mlx/bench/: __init__.py  tier_runner.py
fusion_mlx/cache/: LATENT_CACHE.md  __init__.py  _rotating_subclass.py  boundary_snapshot_store.py  factory.py  hybrid_cache.py  interface.py  latent_cache.py  (+12 more)
mlx-gui/: README.md  claude.md
packaging/: build.py  release_body.md  venvstacks.toml
plans/: b2-lora-runtime-hotswap.md  per-request-spec-routing.md
scripts/: bench_async_denoise.py  bench_decode_toks.py  bench_extrapolation_draft.py  bench_fusion_v041.py  bench_gen_acceleration.py  bench_phase_c_fused_gdn.py  bench_phase_c_nvfp4_vs_w4.py  bench_phase_c_w4a8_viability.py  bench_raw_mlx.py  bench_spec_ab.py  benchmark_all.py  benchmark_full.py  gen_fusion_glyph.py  ltx2_e2e_dev.py  ltx2_e2e_i2v_apg.py  ltx2_e2e_smoke.py  quantize_oq.py  verify_git_pins.sh  wan_convert.py  wan_e2e_smoke.py
tests/: benchmark_ttft_tpot.py  conftest.py  e2e_test_qwen36_generation.py  test_chat_template_tool_call_arguments.py  test_ddtree_eligibility.py  test_ddtree_integration.py  test_deepseek_v32_indexer_gate.py  test_dflash_dspark_spec.py  test_kv_cache_eviction.py  test_mtp_cli_wiring.py  test_mtp_gemma4_assistant_inject.py  test_pull_audio_alias_resolution.py  test_qwen3coder_bare_wrapper_streaming.py  test_reasoning_effort_translation.py  test_release_check_m3_port_thread.py  test_scheduler_disk_kv_hook.py  test_scheduler_preemption.py  test_skyreels_v3.py  test_speculative_acceptance.py  test_speculative_config.py  test_stt_vad_pretrim.py  test_turboquant.py  test_turboquant_k8v4.py  test_ubc_evict.py  test_video_adapters.py
(+1328 files in other folders)
