[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusion-mlx"
dynamic = ["version"]
description = "fusion-mlx — unified local model management for Apple Silicon (omlx + Rapid-MLX)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "fusion-mlx contributors"}
]
keywords = ["llm", "mlx", "apple-silicon", "vllm", "inference", "transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mlx>=0.31.2",
    "mlx-lm @ git+https://github.com/ml-explore/mlx-lm@ed1fca4cef15a824c5f1702c80f70b4cffc8e4dd",
    "regex",
    "mlx-embeddings @ git+https://github.com/Blaizzy/mlx-embeddings@32981fa4e8064ed664b52071789dd18271fe4206",
    "transformers>=5.0.0",
    "mistral-common>=1.10",
    "tokenizers>=0.19.0",
    "huggingface-hub>=0.23.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "itsdangerous>=2.0",
    "jinja2>=3.0",
    "sentencepiece",
    "tiktoken",
    "protobuf",
    "requests>=2.28.0",
    "socksio>=1.0.0",
    "tabulate>=0.9.0",
    "psutil>=5.9.0",
    "fastapi>=0.108.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.5",
    "jsonschema>=4.0.0",
    "openai-harmony>=0.0.8,<1.0.0",
    "mlx-vlm @ git+https://github.com/Blaizzy/mlx-vlm@f96138eef1f5ce7fb5d97f8dd41a664a195b5659",
    "Pillow>=9.0.0",
    "dflash-mlx @ git+https://github.com/bstnxbt/dflash-mlx@1ba671372b289c025b435c1a13aabb4bfb80b183",
     "sqlalchemy>=2.0.0",
     "httpx>=0.24.0",
     "aiofiles>=23.0.0",
     "appdirs>=1.4.4",
     "typer>=0.9.0",
     "rich>=13.0.0",
     "click>=8.0.0",
    "argcomplete>=3.6",
    "websockets>=12.0",
    "markitdown[pdf,docx,pptx]>=0.1.0",
]

[project.optional-dependencies]
grammar = [
    "xgrammar>=0.1.32",
]
mcp = [
    "mcp>=1.0.0",
]
modelscope = [
    "modelscope>=1.10.0",
]
audio = [
    "mlx-audio[tts,stt,sts] @ git+https://github.com/Blaizzy/mlx-audio@51753266e0a4f766fd5e6fbc46652224efc23981",
]
image = [
    "mflux-fusion @ file:///Users/dahai/claude-home/fusion-mlx/packaging/_wheels/mflux_fusion-0.18.0-py3-none-any.whl",
]
video = [
    # Phase 5/6: vendored pure-MLX ports (fusion_mlx.video.ltx2 + wan2) replace
    # mlx-video. Deps mirror mlx-video's own Requires-Dist (core deps excluded).
    "opencv-python>=4.12.0",
    "librosa>=0.10.0",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "ftfy",
]
# Metal Flash Attention (Apple-Silicon native): optional acceleration for
# video attention. When absent the bridge transparently falls back to
# mx.fast.scaled_dot_product_attention, so this stays an opt-in extra.
mfa = [
    "mlx-mfa>=2.61.0",
]
paroquant = [
    "paroquant==0.1.14; python_version >= '3.11'",
]
vision = [
    "opencv-python>=4.8.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
]
chat = [
    "gradio>=4.0.0",
    "pytz>=2024.1",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "mcp>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/fusion-mlx/fusion-mlx"
Documentation = "https://github.com/fusion-mlx/fusion-mlx#readme"
Repository = "https://github.com/fusion-mlx/fusion-mlx"

[project.scripts]
fusion-mlx = "fusion_mlx.cli:main"
fm = "fusion_mlx.cli:main"

[tool.setuptools.dynamic]
version = {attr = "fusion_mlx._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["fusion_mlx*", "fusion_gui*"]

[tool.setuptools.package-data]
"fusion_mlx" = ["aliases.json"]
"fusion_mlx.admin" = ["templates/**/*.html", "static/**/*", "i18n/*.json"]
"fusion_gui" = ["templates/**/*.html"]

[tool.uv]
override-dependencies = [
    "mlx-lm @ git+https://github.com/ml-explore/mlx-lm@ed1fca4cef15a824c5f1702c80f70b4cffc8e4dd",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 88
# patches/ holds upstream-derived model/patch code (mlx_vlm vendor, mlx_lm_mtp,
# deepseek_v4, glm_moe_dsa). Not authored here; linting it creates merge churn.
extend-exclude = ["fusion_mlx/patches"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
# Naming (N8xx), str-Enum modernization (UP042), and ambiguous short var (E741)
# are pre-existing in mature modules (math/tensor `N`/`l` idiom, intentional
# `str, Enum` classes whose str() semantics must not change). Ignored to match
# the codebase's established permissive style; correctness rules stay active.
ignore = ["E402", "E501", "E731", "F811", "F841", "B004", "B007", "B008", "B011", "B017", "B905", "N801", "N806", "SIM103", "SIM108", "SIM110", "SIM117", "SIM222", "UP028", "SIM102", "SIM105", "SIM115", "B904", "UP042", "E741", "N802", "N803", "N807", "N811", "N814", "N818", "SIM113", "SIM116"]

[tool.ruff.lint.per-file-ignores]
# Package re-export surfaces: F401 (re-exports) is the __init__.py purpose.
"__init__.py" = ["F401"]
# core.py re-assembles the split Scheduler via `from .sched_X import *`
# (F403 noqa'd inline). F405 follows from that intentional star-import hub.
"fusion_mlx/scheduler/core.py" = ["F405"]
# Synchronous progress-callback closures defined per-iteration capture loop
# vars; they are invoked within the same iteration (not deferred), so B023
# (loop-variable capture) is a false positive here.
"fusion_mlx/scheduler/sched_schedule.py" = ["B023"]
"fusion_mlx/cache/prefix_cache.py" = ["B023"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
